--- a/thor_devkit_dart/pubspec.yaml
+++ b/thor_devkit_dart/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   pointycastle: ^3.5.2
   r_crypto: ^0.5.0
+  eosdart_ecc: ^0.4.4
 
 dev_dependencies:
   flutter_test:
