--- a/thor_devkit_dart/pubspec.yaml
+++ b/thor_devkit_dart/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
     sdk: flutter
   pointycastle: ^3.5.2
   r_crypto: ^0.5.0
-  eosdart_ecc: ^0.4.4
+  web3dart: ^2.3.5
+  bip39: ^1.0.6
+  bip32: ^2.0.0
 
 dev_dependencies:
   flutter_test:
