--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,22 @@
 name: thor_devkit_dart
 description: Dart package to assist smooth development on VeChain for developers and hobbyists.
-version: 1.0.1
+version: 1.1.0
 repository: https://github.com/SayNode/thor-devkit.dart/tree/main/thor_devkit_dart
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ^3.0.0
 
 dependencies:
-  pointycastle: ^3.5.2
-  web3dart: ^2.3.5
+  pointycastle: ^3.7.4
+  web3dart: ^2.7.2
   bip39: ^1.0.6
   bip32: ^2.0.0
-  base_x: ^2.0.0
+  base_x: ^2.0.1
   rlp: ^2.0.0
-  convert: ^3.0.2
+  convert: ^3.1.1
 
 
 dev_dependencies:
-  test: ^1.21.1
+  test: ^1.25.2
 
 
